# eulumdat-report

./: .gitignore  CLAUDE.md  CONTEXT_eulumdat-report.md  README.md  pyproject.toml
data/input/: sample_02_isym4.ldt  sample_04_isym2.ldt  sample_13_isym1.ldt  sample_16_isym3.ldt  sample_18_isym4.ldt  sample_31_isym1.ldt  sample_32_isym1.ldt  sample_39_isym1.ldt  sample_40_isym4.ldt
docs/: eco_eulumdat.html  report_mockup.html  ugr_table.html  ugr_to_html.py
examples/: 01_basic_usage.md  sample_02_isym4.html
src/eulumdat_report/: __init__.py  cli.py  collector.py  renderer.py
src/eulumdat_report/templates/: default.css  default.html  luminance_image.html  ugr_image.html
tests/: test_report.py
