[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eulumdat-report"
version = "1.1.0"
description = "Photometric datasheet generator (HTML + PDF) from EULUMDAT .ldt files"
readme = "README.md"
license = "MIT"
authors = [
    { name = "123VincentB" }
]
keywords = ["photometry", "eulumdat", "ldt", "lighting", "report", "pdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "eulumdat-py",
    "eulumdat-analysis",
    "eulumdat-plot",
    "eulumdat-luminance",
    "eulumdat-ugr",
    "jinja2",
    "playwright",
    "click",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[project.scripts]
eulumdat-report = "eulumdat_report.cli:main"

[project.urls]
Homepage = "https://github.com/123VincentB/eulumdat-report"
Repository = "https://github.com/123VincentB/eulumdat-report"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eulumdat_report = ["templates/*.html", "templates/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
